<resources>
    <string name="app_name">Astra GID</string>
    <string name="status_vehicle">Opel Astra H / GID</string>
    <string name="label_instant_consumption">Миттєвий розхід</string>
    <string name="label_avg_consumption">Розхід на 100км</string>
    <string name="label_range">Запас ходу</string>
    <string name="label_coolant">Охолодження</string>
    <string name="label_ambient">Навколо</string>
    <string name="label_voltage">Акумулятор</string>
    <string name="label_can">CAN bus</string>
    <string name="label_time">Час</string>
    <string name="msg_elm_connected">ELM з\'єднано</string>
    <string name="msg_elm_disconnected">ELM чекаю</string>
    <string name="button_media">Медіа</string>
    <string name="button_radio">Радіо</string>
    <string name="button_nav">Навігація</string>
    <string name="button_car">Автомобіль</string>
    <string name="button_settings">Налаштування</string>
    <string name="unit_liter_per_hour">л/год</string>
    <string name="unit_liter_per_hundred">л/100км</string>
    <string name="unit_kilometers">км</string>
    <string name="unit_celsius">°C</string>
</resources>
